namespace_and_limits.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mi-namespace
