backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mi-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
